@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=K2D&display=swap">
+    <link href="https://fonts.googleapis.com/css?family=Maitree&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" crossorigin="anonymous">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -40,6 +40,9 @@
             <input id="signup" type="text" placeholder="Email">
             <li>Currency</li>
             <input id="signup" type="text" placeholder="Currency">
+            <div id="signup-form-options">
+                <li style="text-align:left;" onclick="BackToSignIn()">Back to sign in</li>
+            </div>
             <div id="signup-button" onclick="SignUpCheck()">Sign up</div>
         </div>
         <div id="forgotmypassword-form" style="display:none">
@@ -48,12 +51,9 @@
     </div>
     <main>
         <div id="user-panel">
-            <div style="float:right">
-                <i class="fas fa-history" style="display:inline;"></i>
-                <i class="fas fa-cog" style="display:inline;"></i>
-            </div>
-            <i class="fas fa-user-circle"></i>
-            <li id="fullname" style="display:inline;">Apisit Ritreungroj</li>
+            <div style="float:right" id="today-date"></div>
+            <i class="fas fa-user-circle" id="user-icon"></i>
+            <li id="fullname" style="display:inline;">%fullname%</li>
         </div>
         <div id="main-fiscal-panel">
             <h1 style="text-align:center">Today's Fiscal</h1>
@@ -63,7 +63,7 @@
                     <article>Expenditure:</article>
                 </div>
                 <div class="detail" style="max-height:0">
-                    <div>
+                    <div class="detail-list">
 
                     </div>
                     <div class="create-list-grid">
@@ -79,7 +79,7 @@
                     <article>Income:</article>
                 </div>
                 <div class="detail" style="max-height:0">
-                    <div>
+                    <div class="detail-list">
                         
                     </div>
                     <div class="create-list-grid">
@@ -95,7 +95,7 @@
                     <article>Lending:</article>
                 </div>
                 <div class="detail" style="max-height:0">
-                    <div>
+                    <div class="detail-list">
 
                     </div>
                     <div class="create-list-grid">
@@ -111,7 +111,7 @@
                     <article>Debt:</article>
                 </div>
                 <div class="detail" style="max-height:0">
-                    <div>
+                    <div class="detail-list">
                         
                     </div>
                     <div class="create-list-grid">
@@ -126,6 +126,7 @@
                 <article>Balance:</article>
             </div>
         </div>
+        <h1 style="text-align:center">Statistics</h1>
         <div id="main_statistics">
             <li>Loading Statistics...</li>
         </div>
