@@ -6,6 +6,9 @@ function Devmode() {
 
     user = "apskhem";
     ReadReq();
+
+    ID("signin-userid").disabled = true;
+    ID("signin-password").disabled = true;
     TN("main")[0].style.display = "block";
     TN("footer")[0].style.display = "block";
     ID("form").style.display = "none";
